--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.22.2",
     "nzh": "^1.0.3",
     "rc-form": "^2.4.12",
+    "sha1": "^1.1.1",
     "umi": "^3.3.9",
     "umi-request": "^1.0.0"
   },
