--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.0.2",
+    "@ant-design/pro-descriptions": "^1.0.1",
     "@ant-design/pro-layout": "^6.14.5",
+    "@ant-design/pro-table": "^2.0.1",
     "@umijs/preset-react": "1.x",
     "antd": "^4.0.0",
     "classnames": "^2.2.6",
+    "dva": "^2.4.0",
     "moment": "^2.22.2",
     "nzh": "^1.0.3",
     "rc-form": "^2.4.12",
